--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -32,7 +32,7 @@ jobs:
         uses: conda-incubator/setup-miniconda@v3
         with:
           python-version: ${{ matrix.python-version }}
-          environment-file: environment.yml
+          environment-file: environment.yaml
           activate-environment: prep
           auto-update-conda: true
           auto-activate-base: false
